--- a/src/app/todo/todo-item/todo-item.component.html
+++ b/src/app/todo/todo-item/todo-item.component.html
@@ -1,10 +1,10 @@
 <!-- These are here just to show the structure of the list items -->
   <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-  <li class="completed">
+  <li [ngClass]="{ 'completed': todo.completado, 'editing': editando}">
     <div class="view">
-      <input class="toggle" type="checkbox" checked>
-      <label>Taste JavaScript</label>
+      <input class="toggle" type="checkbox" [formControl]="checkField" [checked]="todo.completado">
+      <label (dblclick)="editar()">{{todo.texto}}</label>
       <button class="destroy"></button>
     </div>
-    <input class="edit" value="Create a TodoMVC template">
+    <input class="edit" value="todo.texto" [formControl]="txtInput" (blur)="terminarEdicion()" #txtInputFisico>
   </li>
