--- a/src/app/todo/todo-item/todo-item.component.html
+++ b/src/app/todo/todo-item/todo-item.component.html
@@ -2,9 +2,16 @@
   <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
   <li [ngClass]="{ 'completed': todo.completado, 'editing': editando}">
     <div class="view">
-      <input class="toggle" type="checkbox" [formControl]="checkField" [checked]="todo.completado">
+      <input  class="toggle"
+              type="checkbox"
+              [formControl]="checkField"
+              [checked]="todo.completado">
       <label (dblclick)="editar()">{{todo.texto}}</label>
       <button class="destroy"></button>
     </div>
-    <input class="edit" value="todo.texto" [formControl]="txtInput" (blur)="terminarEdicion()" #txtInputFisico>
+    <input  class="edit"
+            value="todo.texto"
+            [formControl]="txtInput"
+            (blur)="terminarEdicion()"
+            #txtInputFisico>
   </li>
