--- a/src/app/todo/todo-item/todo-item.component.html
+++ b/src/app/todo/todo-item/todo-item.component.html
@@ -7,7 +7,7 @@
               [formControl]="checkField"
               [checked]="todo.completado">
       <label (dblclick)="editar()">{{todo.texto}}</label>
-      <button class="destroy"></button>
+      <button (click)="borrarTodo()" class="destroy"></button>
     </div>
     <input  class="edit"
             value="todo.texto"
