--- a/src/app/todo/todo-footer/todo-footer.component.html
+++ b/src/app/todo/todo-footer/todo-footer.component.html
@@ -3,14 +3,8 @@
   <span class="todo-count"><strong>0</strong> item left</span>
   <!-- Remove this if you don't implement routing -->
   <ul class="filters">
-    <li>
-      <a class="selected" href="#/">All</a>
-    </li>
-    <li>
-      <a href="#/active">Active</a>
-    </li>
-    <li>
-      <a href="#/completed">Completed</a>
+    <li (click)="cambiarFiltro(filtro)" *ngFor="let filtro of filtrosValidos">
+      <a [ngClass]="{'selected': filtro === filtroActual}">{{filtro}}</a>
     </li>
   </ul>
   <!-- Hidden if no completed items are left ↓ -->
