--- a/src/app/todo/todo-footer/todo-footer.component.html
+++ b/src/app/todo/todo-footer/todo-footer.component.html
@@ -8,5 +8,5 @@
     </li>
   </ul>
   <!-- Hidden if no completed items are left ↓ -->
-  <button class="clear-completed">Clear completed</button>
+  <button (click)="clearCompleted()" class="clear-completed">Clear completed</button>
 </footer>
